// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Motif test suite should generate createMotif based on chord 1`] = `
Array [
  Object {
    "dur": 480,
    "midi": 64,
    "note": "E3",
    "time": 0,
  },
  Object {
    "dur": 160,
    "midi": 68,
    "note": "Ab3",
    "time": 480,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "Ab3",
    "time": 640,
  },
  Object {
    "dur": 120,
    "midi": 68,
    "note": "Ab3",
    "time": 880,
  },
  Object {
    "dur": 320,
    "midi": 64,
    "note": "E3",
    "time": 1000,
  },
  Object {
    "dur": 240,
    "midi": 64,
    "note": "E3",
    "time": 1320,
  },
  Object {
    "dur": 360,
    "midi": 61,
    "note": "Db3",
    "time": 1560,
  },
]
`;

exports[`A Motif test suite should generate createMotif based on chord 2`] = `
Array [
  Object {
    "dur": 480,
    "midi": 64,
    "note": "E3",
    "time": 0,
  },
  Object {
    "dur": 240,
    "midi": 64,
    "note": "E3",
    "time": 480,
  },
  Object {
    "dur": 240,
    "midi": 64,
    "note": "E3",
    "time": 720,
  },
  Object {
    "dur": 480,
    "midi": 68,
    "note": "Ab3",
    "time": 960,
  },
  Object {
    "dur": 160,
    "midi": 64,
    "note": "E3",
    "time": 1440,
  },
  Object {
    "dur": 480,
    "midi": 64,
    "note": "E3",
    "time": 1600,
  },
  Object {
    "dur": 320,
    "midi": 61,
    "note": "Db3",
    "time": 2080,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "Ab3",
    "time": 2400,
  },
  Object {
    "dur": 480,
    "midi": 68,
    "note": "Ab3",
    "time": 2640,
  },
  Object {
    "dur": 240,
    "midi": 64,
    "note": "E3",
    "time": 3120,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "Ab3",
    "time": 3360,
  },
  Object {
    "dur": 120,
    "midi": 68,
    "note": "Ab3",
    "time": 3600,
  },
  Object {
    "dur": 120,
    "midi": 68,
    "note": "Ab3",
    "time": 3720,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 1`] = `
Array [
  Object {
    "dur": 480,
    "midi": 73,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": 160,
    "midi": 76,
    "note": "E4",
    "time": 480,
  },
  Object {
    "dur": 240,
    "midi": 78,
    "note": "F#4",
    "time": 640,
  },
  Object {
    "dur": 120,
    "midi": 76,
    "note": "E4",
    "time": 880,
  },
  Object {
    "dur": 320,
    "midi": 74,
    "note": "D4",
    "time": 1000,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 1320,
  },
  Object {
    "dur": 360,
    "midi": 69,
    "note": "A3",
    "time": 1560,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 2`] = `
Array [
  Object {
    "dur": 480,
    "midi": 73,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": 240,
    "midi": 74,
    "note": "D4",
    "time": 480,
  },
  Object {
    "dur": 240,
    "midi": 71,
    "note": "B3",
    "time": 720,
  },
  Object {
    "dur": 480,
    "midi": 76,
    "note": "E4",
    "time": 960,
  },
  Object {
    "dur": 160,
    "midi": 73,
    "note": "C#4",
    "time": 1440,
  },
  Object {
    "dur": 480,
    "midi": 71,
    "note": "B3",
    "time": 1600,
  },
  Object {
    "dur": 320,
    "midi": 71,
    "note": "B3",
    "time": 2080,
  },
  Object {
    "dur": 240,
    "midi": 76,
    "note": "E4",
    "time": 2400,
  },
  Object {
    "dur": 480,
    "midi": 76,
    "note": "E4",
    "time": 2640,
  },
  Object {
    "dur": 240,
    "midi": 74,
    "note": "D4",
    "time": 3120,
  },
  Object {
    "dur": 240,
    "midi": 76,
    "note": "E4",
    "time": 3360,
  },
  Object {
    "dur": 120,
    "midi": 76,
    "note": "E4",
    "time": 3600,
  },
  Object {
    "dur": 120,
    "midi": 78,
    "note": "F#4",
    "time": 3720,
  },
]
`;

exports[`A Motif test suite should return pattern with time = start time 1`] = `
Array [
  Object {
    "dur": 480,
    "midi": 70,
    "note": "Bb3",
    "time": 0,
  },
]
`;

exports[`A Motif test suite should return pattern with time = start time 2`] = `
Array [
  Object {
    "dur": 240,
    "midi": 68,
    "note": "Ab3",
    "time": 480,
  },
  Object {
    "dur": 120,
    "midi": 68,
    "note": "Ab3",
    "time": 720,
  },
  Object {
    "dur": 320,
    "midi": 64,
    "note": "E3",
    "time": 840,
  },
  Object {
    "dur": 240,
    "midi": 64,
    "note": "E3",
    "time": 1160,
  },
  Object {
    "dur": 360,
    "midi": 61,
    "note": "Db3",
    "time": 1400,
  },
  Object {
    "dur": 160,
    "midi": 64,
    "note": "E3",
    "time": 1760,
  },
]
`;
